Vishal Updated Files

--- a/jainDataBase/teeka/02_चरणानुयोग/01_नियमसार--कुन्दकुंदाचार्य/html/index.html
+++ b/jainDataBase/teeka/02_चरणानुयोग/01_नियमसार--कुन्दकुंदाचार्य/html/index.html
@@ -61,7 +61,7 @@
 <div align=right><b><font size=20>- कुन्दकुंदाचार्य</font></b></div>
 <br><br><br><font size=2 color=darkRed>
 <div align=right>nikkyjain@gmail.com</div>
-<div align=right>Date : 08-Aug-2022</font></div>   <div class=adhikaar id=home><h1>Index</h1></div><br>
+<div align=right>Date : 09-Aug-2022</font></div>   <div class=adhikaar id=home><h1>Index</h1></div><br>
   <div class=main>अधिकार</div><br>
     <table align=center width=90% class=adhikarIndex>
       <td><a href='#ad1'>﻿जीव-अधिकार</a>
@@ -1848,13 +1848,13 @@
 <b><div class=gadya> <span class=notes>(कलश--हरिगीत)</span><br>
 मुक्त्यांगना का भ्रमर अर जो मोक्ष-सुख का मूल है  ।<br>
 दुर्भावनातमविनाशक दिनकरप्रभा समतूल है ॥<br>
-संयमीजन सदा समंत रहें समताभाव से  ।<br>
+संयमीजन सदा संमत रहें समताभाव से  ।<br>
 मैं भाऊँ समताभाव को अत्यन्त भक्तिभाव से ॥१४०॥</div></b></div><br><div class=teeka>
 जो <span class=notes>(समता)</span> मुक्ति सुन्दरी की सखी है, जो मोक्ष सौख्य का मूल है, जो दुर्भावनारूपी तिमिर-समूह को <span class=notes>(नष्ट करने के लिये)</span> चन्द्र के प्रकाश समान है और जो संयमियों को निरंतर संमत है, उस समता को मैं अत्यंत भाता हूँ ।</div><br><div class=teeka>
 <b><div class=gadya> <span class=notes>(कलश--हरिगीत)</span><br>
 जो योगियों को महादुर्लभ भाव अपरंपार है  ।<br>
 त्रैलोक्यजन अर मुनिवरों का अनोखालंकार है ॥<br>
-सुखोदधि के ज्वार को जो पूर्णिा का चन्द्र है  ।<br>
+सुखोदधि के ज्वार को जो पूर्णिमा का चन्द्र है  ।<br>
 दीक्षांगना की सखी यह समता सदा जयवंत है ॥१४१॥</div></b></div><br><div class=teeka>
 जो योगियों को भी दुर्लभ है, जो निजाभिमुख सुख के सागर में ज्वार लाने के लिये पूर्ण चन्द्र की प्रभा <span class=notes>(समान)</span> है, जो परम संयमियों की दीक्षारूपी स्त्री के मन को प्यारी सखी है तथा जो मुनिवरों के समूह का तथा तीन-लोक का भी अतिशयरूप से आभूषण है, वह समता सदा जयवन्त है ।</div><hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
@@ -1947,7 +1947,7 @@
 मोह के विलास से फैला हुआ जो यह उदयमान <span class=notes>(उदय में आनेवाला)</span> कर्म, उस समस्त को आलोचकर <span class=notes>(उन सर्व कर्मों की आलोचना करके)</span>, मैं निष्कर्म <span class=notes>(सर्व कर्मों से रहित)</span> चैतन्य-स्वरूप आत्मा में आत्मा से ही <span class=notes>(स्वयं से ही)</span> निरंतर वर्तता हूँ ।</div><br><div class=teeka>
 और उपासकाध्ययन में <span class=notes>(श्री समंतभद्रस्वामीकृत रत्नकरण्डश्रावकाचार में १२५वें श्लोक द्वारा)</span> कहा है कि : — </div><br><div class=teeka>
 <b><div class=gadya> <span class=notes>(कलश)</span><br>
-किये कराये अनुोदित पापों का अब तो  ।<br>
+किये कराये अनुमोदित पापों का अब तो  ।<br>
 आलोचन करता हूँ मैं निष्कपट भाव से ॥<br>
 अरे पूर्णत: उन्हें छोड़ने का अभिलाषी  ।<br>
 धारण करता यह महान व्रत अरे आमरण ॥४५॥</div></b></div><br><div class=teeka>
