Sunaina pushed 23apr2023

--- a/jainDataBase/shastra/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/001.html
+++ b/jainDataBase/shastra/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/001.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='0000_शास्त्र-मंगलाचरण.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='01.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>  <div data-role='navbar'>
     <ul>
 
@@ -61,7 +61,7 @@
     </li>
       </ul>
     </div>
-   <div class=gatha>﻿शुद्धं प्रबुद्धं वसुकर्ममुक्तं,<br>निःसीमज्ञानादिकशक्तियुक्तम् ।<br>भव्येषु नन्द्यं भुवनेषु वन्द्यं,<br>अजितं जिनेशं प्रणमामि नित्यम् ॥ब्र.दे.सू.॥</div>
+   <div class=gatha>﻿शुद्धं प्रबुद्धं वसुकर्ममुक्तं,<br>निःसीमज्ञानादिकशक्तियुक्तम् ।<br>भव्येषु नन्द्यं भुवनेषु वन्द्यं,<br>अजितं जिनेशं प्रणमामि नित्यम् ॥ब्र.दे.सू.॥<br><br>प्रणम्य परमात्मानं सिद्धं त्रैलोक्यवन्दितं,<br>स्वाभाविक चिदानंदस्वरूपं निर्मलाव्ययम् ॥१॥ <br>शुद्धजीवादि द्रव्याणां देशकं च जिनेश्वरं, <br>द्रव्यसंग्रहसूत्राणां वृत्तिं वक्ष्ये समासतः ॥२॥ युगमं <br><br></div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿स्वाभाविक ज्ञान-आनन्दस्वरूप <span class=comment>(केवलज्ञानी-अनन्तसुखी)</span>, निर्मल <span class=comment>(कर्ममल रहित)</span>, अविनाशी शुद्ध जीव आदि द्रव्यों के उपदेशक, जिनेश्वर <span class=comment>(गणधर आदि कषायविजेता जिनों के स्वामी)</span>, त्रिलोक-वन्दित <span class=comment>(ऊर्ध्व, मध्य, अधोलोकवर्ती जीवों से वन्दनीक)</span> सिद्ध परमात्मा को नमस्कार करके सूत्र <span class=comment>(बहुत अर्थ को थोड़े शब्दों द्वारा प्रतिपादन करना)</span> रूप द्रव्यसंग्रह ग्रन्थ की मैं <span class=comment>(ब्रह्मदेव)</span> संक्षेप से व्याख्या करूँगा।</div>
   <br><div class=teekakaar>
     <span onclick='toggleTeeka("0")' class=teeka0>&nbsp;&nbsp;ब्रह्मदेव सूरि</span>&nbsp;
