--- a/jainDataBase/shastra/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/01.html
+++ b/jainDataBase/shastra/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/01.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='001.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='02.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>  <div data-role='navbar'>
     <ul>
 
@@ -76,7 +76,7 @@
 वह नमस्कार करने वाला कौन है? <br><br>
 मैं द्रव्यसंग्रह ग्रन्थ का निर्माता श्रीनेमिचन्द्रसिद्धान्तिदेव हूँ। <br><br>
 कैसे नमस्कार करता हूँ ? <br><br>
-<b>[<font color=maroon>सव्वदा</font>]</b> सदा शिरसा सिर झुका करके नमस्कार करता हूँ। <br><br>
+<b>[<font color=maroon>सव्वदा</font>]</b> सदा <b>[<font color=maroon>शिरसा</font>]</b> सिर झुका करके नमस्कार करता हूँ। <br><br>
 <b>[<font color=maroon>तं</font>]</b> वन्दना क्रिया के कर्मपने को प्राप्त किसको नमस्कार करता हूँ? <br><br>
 उस वीतरागसर्वज्ञ को ।<br><br>
 वह वीतरागसर्वज्ञ देव कैसे हैं ? <br><br>
@@ -84,13 +84,14 @@
 इन भगवान् ने क्या किया है?<br><br>
 <b>[<font color=maroon>णिद्दिट्ठं</font>]</b> कहा है।<br><br>
 क्या कहा है?<br><br>
-<b>[<font color=maroon>जीवमजीवं दव्वं</font>]</b> जीव और अजीव दो द्रव्य कहे हैं। जैसे कि <ul><li>स्वाभाविक शुद्ध चैतन्य आदि लक्षण वाला <b><font color=blue>जीव द्रव्य</font></b> है और <li>इससे विलक्षण गुणी यानि अचेतन १ पुद्गल, २ धर्म, ३ अधर्म, ४ आकाश और ५ काल, इन पाँच भेदों वाला <b><font color=blue>अजीव द्रव्य</font></b> है। <li>तथा चिच्चमत्काररूप लक्षण वाला शुद्ध जीव-अस्तिकाय एवं पुद्गल, धर्म, अधर्म और आकाश ये <b><font color=blue>पाँच अस्तिकाय</font></b> हैं। <li>परमज्ञान-ज्योति-स्वरूप शुद्ध जीव तथा अजीव, आस्रव, बन्ध, संवर, निर्जरा और मोक्ष ये <b><font color=blue>सात तत्त्व</font></b> हैं और <li>दोषरहित परमात्मा जीव आदि <b><font color=blue>नौ पदार्थ</font></b> हैं; </ul>उन सबका स्वरूप कहा है।<br><br>
+<b>[<font color=maroon>जीवमजीवं दव्वं</font>]</b> जीव और अजीव दो द्रव्य कहे हैं। जैसे कि <ul><li>स्वाभाविक शुद्ध चैतन्य आदि लक्षण वाला <b><font color=blue>जीव द्रव्य</font></b> है और इससे विलक्षण गुणी यानि अचेतन १ पुद्गल, २ धर्म, ३ अधर्म, ४ आकाश और ५ काल, इन पाँच भेदों वाला <b><font color=blue>अजीव द्रव्य</font></b> है। <li>तथा चिच्चमत्काररूप लक्षण वाला शुद्ध जीव-अस्तिकाय एवं पुद्गल, धर्म, अधर्म और आकाश ये <b><font color=blue>पाँच अस्तिकाय</font></b> हैं। <li>परमज्ञान-ज्योति-स्वरूप शुद्ध जीव तथा अजीव, आस्रव, बन्ध, संवर, निर्जरा और मोक्ष ये <b><font color=blue>सात तत्त्व</font></b> हैं और <li>दोषरहित परमात्मा जीव आदि <b><font color=blue>नौ पदार्थ</font></b> हैं; </ul>उन सबका स्वरूप कहा है।<br><br>
 पुनः वे भगवान् कैसे हैं?<br><br>
 <b>[<font color=maroon>जिणवरवसहेण</font>]</b> मिथ्यात्व तथा राग आदि को जीतने के कारण असंयतसम्यग्दृष्टि आदि एकदेशी जिन हैं, उनमें जो वर-श्रेष्ठ हैं वे जिनवर यानि गणधरदेव हैं, उन जिनवरों-गणधरों में भी जो प्रधान है; वह जिनवर वृषभ अर्थात् तीर्थंकर परमदेव हैं। उन जिनेन्द्र भगवान् के द्वारा कहे गये हैं, इति।<br><br>
 आध्यात्मिक शास्त्र में यद्यपि सिद्ध परमेष्ठियों को नमस्कार करना उचित है तो भी व्यवहारनय का अवलम्बन लेकर जिनेन्द्र के उपकार-स्मरण करने के लिए अर्हत्परमेष्ठी को ही नमस्कार किया है। ऐसा कहा भी है कि अर्हत्परमेष्ठी के प्रसाद से मोक्षमार्ग की सिद्धि होती है। इसलिए प्रधान मुनियों ने शास्त्र के प्रारम्भ में अर्हत् परमेष्ठी के गुणों की स्तुति की है ॥१॥<br><br>
 यहाँ गाथा के उत्तरार्ध से <ol><li>नास्तिकता का त्याग, <li>सभ्य पुरुषों के आचरण का पालन <li>पुण्य की प्राप्ति और <li>विघ्नविनाश </ol>इन चार लाभों के लिए शास्त्र के आरम्भ में इष्टदेव की स्तुति की जाती है । इस तरह श्लोक में कहे हुए चार फलों को देखते हुए शास्त्रकार तीन प्रकार के देवता के लिए मन, वचन और काय द्वारा नमस्कार करते हैं । तीन प्रकार के देवता कहे जाते हैं। किस प्रकार? इष्ट, अधिकृत और अभिमत ये तीन भेद हैं। <ol><li><b><font color=blue>इष्ट</font></b> - अपने द्वारा पूज्य इष्ट है। <li><b><font color=blue>अधिकृत</font></b> - ग्रन्थ अथवा प्रकरण के आदि में नमस्कार करने के लिए जिसकी विवक्षा की जाती है वह अधिकृत है। <li><b><font color=blue>अभिमत</font></b> - विवाद बिना सब लोगों को सम्मत हो; वह अभिमत है।</ol> इस तरह मंगल का व्याख्यान किया।<br><br>
 यहाँ मंगल यह उपलक्षण पद है। कहा भी है कि आचार्य <ol><li>मंगलाचरण, <li>शास्त्र बनाने का निमित्त-कारण,<li>शास्त्र का प्रयोजन, <li>शास्त्र का परिमाण यानि श्लोक संख्या, <li>शास्त्र का नाम और <li>शास्त्र का कर्ता</ol> इन छह अधिकारों को बतला करके शास्त्र का व्याख्यान करे ॥१॥ इस गाथा में कहे हुए मंगल आदि छह अधिकार भी जानने चाहिए। गाथा के पूर्वार्ध से सम्बन्ध, अभिधेय तथा प्रयोजन सूचित किया है। कैसे सूचित किया है? इसका उत्तर यह है कि <ul><li>निर्मल ज्ञान दर्शन-रूप स्वभाव-धारक जो परमात्मा है, उसके स्वरूप को विस्तार से कहने वाली जो वृत्ति है, वह तो व्याख्यान है और उसके प्रतिपादन करने वाले जो गाथा सूत्ररूप हैं, वे व्याख्येय <span class=notes>(व्याख्या करने योग्य)</span> हैं। इस प्रकार <b><font color=blue>व्याख्यान-व्याख्येय</font></b> रूप सम्बन्ध जानना चाहिए। और <li>जो व्याख्यान करने योग्य सूत्र है वही अभिधान अर्थात् वाचक कहलाता है। तथा अनन्त ज्ञानादि अनन्त गुणों का आधार जो परमात्मा आदि का स्वभाव है वह अभिधेय है अर्थात् कथन करने योग्य विषय है। इसप्रकार '<b><font color=blue>अभिधान अभिधेय</font></b>' का स्वरूप जानना चाहिए। <li>व्यवहारनय की अपेक्षा से 'षड्द्रव्य आदि का जानना' इस ग्रन्थ का प्रयोजन है और निश्चयनय से अपने निर्लेप शुद्ध आत्मा के ज्ञान से प्रकट हुआ जो विकार रहित परम आनन्दरूपी अमृत रस का आस्वादन करने रूप जो स्व-संवेदन ज्ञान है, वह इस ग्रन्थ का <b><font color=blue>प्रयोजन</font></b> है। परम निश्चयनय से उस आत्मज्ञान के फलरूप-केवलज्ञान आदि अनन्त गुणों के बिना न होने वाली और निज आत्मारूप उपादान कारण से सिद्ध होने वाली ऐसी जो अनन्त सुख की प्राप्ति है, वह इस ग्रन्थ का प्रयोजन है। </ul>इस तरह पहली नमस्कार-गाथा का व्याख्यान किया है।<br><br>
-अब "नमस्कार गाथा में जो प्रथम ही जीवद्रव्य कहा गया है, उस जीवद्रव्य के सम्बन्ध में नौ अधिकारों को मैं संक्षेप से सूचित करता हूँ।" यह अभिप्राय मन में धारण करके जीव आदि नौ अधिकारों का कथन करने वाले सूत्र का निरूपण करते हैं --
+अब "नमस्कार गाथा में जो प्रथम ही जीवद्रव्य कहा गया है, उस जीवद्रव्य के सम्बन्ध में नौ अधिकारों को मैं संक्षेप से सूचित करता हूँ।" यह अभिप्राय मन में धारण करके जीव आदि नौ अधिकारों का कथन करने वाले सूत्र का निरूपण करते हैं --<br><br>
+
        </div>
     </td></tr>
     <tr><td><div id=teeka1 class=teeka><b><font color=darkgreen>आर्यिका ज्ञानमती :</font></b> <br><br>﻿<b><div class=gadya>जिनवर में श्रेष्ठ सुतीर्थंकर, जिनने जग को उपदेशा है<br>
