--- a/jainDataBase/shastra/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/19.html
+++ b/jainDataBase/shastra/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/19.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='18.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='20.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>  <div data-role='navbar'>
     <ul>
 
@@ -65,7 +65,8 @@
 ﻿आकाश द्रव्य का स्वरूप</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿अवगासदाण जोग्गं, जीवादीणं वियाण आयासं<br>जेण्हं लोगागासं, अल्लोगागासमिदि दुविहं ॥19॥</div>
     <div class=gadya>आकाश वह जीवादि को अवकाश देने योग्य जो ।<br>आकाश के दो भेद हैं जो लोक और अलोक हैं ॥१९॥</div>
-    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿जो <b><font color=darkRed>[जीवादीणं]</font></b> जीव आदि समस्त द्रव्यों के <b><font color=darkRed>[अवगासदाण-जोग्गं]</font></b> अवकाश देने में समर्थ है उसे <b><font color=darkRed>[आयासं]</font></b> आकाशद्रव्य <b><font color=darkRed>[वियाण]</font></b> जानो वह <b><font color=darkRed>[जेण्ह]</font></b> जिनेन्द्रदेव ने <b><font color=darkRed>[लोगागासं अल्लोगागास]</font></b>लोकाकाश और अलोकाकाश <b><font color=darkRed>[इदि]</font></b> इस प्रकार <b><font color=darkRed>[दुविहं]</font></b> दो प्रकार का कहा है ।</div>
+    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿जो <b><font color=darkRed>[जीवादीणं]</font></b> जीव आदि समस्त द्रव्यों के <b><font color=darkRed>[अवगासदाण-जोग्गं]</font></b> अवकाश देने में समर्थ है उसे <b><font color=darkRed>[आयासं]</font></b> आकाशद्रव्य <b><font color=darkRed>[वियाण]</font></b> जानो वह <b><font color=darkRed>[जेण्ह]</font></b> जिनेन्द्रदेव ने <b><font color=darkRed>[लोगागासं अल्लोगागास]</font></b> लोकाकाश और अलोकाकाश <b><font color=darkRed>[इदि]</font></b> इस प्रकार <b><font color=darkRed>[दुविहं]</font></b> दो प्रकार का कहा है ।</div>
+<div class=paragraph></div>
     <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿According to Lord Jina, the substance which provides accommodation to substances like souls, is to be known as ākāsha <span class=comment>(space)</span>. Ākāsha comprises two parts: lokākāsha <span class=comment>(the universe space)</span>, and alokākāsha <span class=comment>(the non-universe space)</span>.</div>
   <br><div class=teekakaar>
     <span onclick='toggleTeeka("0")' class=teeka0>&nbsp;&nbsp;ब्रह्मदेव सूरि</span>&nbsp;
