--- a/jainDataBase/shastra/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/21.html
+++ b/jainDataBase/shastra/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/21.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='20.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='22.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>  <div data-role='navbar'>
     <ul>
 
@@ -65,7 +65,8 @@
 ﻿कालद्रव्य का स्वरूप</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿दव्वपरिवट्टरूवो, जो सो कालो हवेइ ववहारो<br>परिणामादीलक्खो, वट्टणलक्खो व परमट्ठो ॥21॥</div>
     <div class=gadya>परिवर्तन रूप परिणामादि लक्षित काल जो ।<br>व्यवहार वह परमार्थ तो बस वर्तनामय जानिये ॥२१॥</div>
-    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[जो दव्व-परिवट्टरूवो]</font></b> द्रव्यों के परिवर्तनरूप और <b><font color=darkRed>[परिणामादी-लक्खो]</font></b> परिणाम यानि समय आदि पर्याय लक्षण वाला है <b><font color=darkRed>[सो ववहारो कालो]</font></b> वह व्यवहारकाल है <b><font color=darkRed>[य]</font></b> और<b><font color=darkRed>[वडणलक्खो]</font></b> जिसका वर्तना ही लक्षण है <b><font color=darkRed>[परमट्ठो]</font></b> वह परमार्थ काल अर्थात् निश्चयकाल <b><font color=darkRed>[हवेइ]</font></b> होता है ।</div>
+    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[ दव्व-परिवट्टरूवो]</font></b> जो द्रव्यों के परिवर्तनरूप और <b><font color=darkRed>[परिणामादी-लक्खो]</font></b> परिणाम यानि समय आदि पर्याय लक्षण वाला है <b><font color=darkRed>[सो ववहारो कालो]</font></b> वह व्यवहारकाल है <b><font color=darkRed>[य]</font></b> और <b><font color=darkRed>[वडणलक्खो]</font></b> जिसका वर्तना ही लक्षण है <b><font color=darkRed>[परमट्ठो]</font></b> वह परमार्थ काल अर्थात् निश्चयकाल <b><font color=darkRed>[हवेइ]</font></b> होता है ।</div>
+<div class=paragraph></div>
     <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿Conventional time <span class=comment>(vyavahara kala)</span> is perceived by the senses through the transformations and modifications of substances. Real time <span class=comment>(nishchaya kāla)</span>, however, is the cause of imperceptible, minute changes <span class=comment>(called vartanā)</span> that go on incessantly in all substances.</div>
   <br><div class=teekakaar>
     <span onclick='toggleTeeka("0")' class=teeka0>&nbsp;&nbsp;ब्रह्मदेव सूरि</span>&nbsp;
