--- a/jainDataBase/shastra/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/30.html
+++ b/jainDataBase/shastra/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/30.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='29.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='31.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>  <div data-role='navbar'>
     <ul>
 
@@ -66,6 +66,7 @@
    <div class=gatha>﻿मिच्छत्ताविरदिपमाद - जोगकोहादओथ विण्णेया<br>पण पण पण दह तिय चदु, कमसो भेदा दु पुव्वस्स ॥30॥</div>
     <div class=gadya>मिथ्यात्व-अविरति पाँच-पाँचरू पंचदश परमाद हैं ।<br>त्रय योग चार कषाय ये सब आस्रवों के भेद हैं ॥३०॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[अथ]</font></b> अब <b><font color=darkRed>[पुव्वस्स]</font></b> पहले भावास्रव के <b><font color=darkRed>[मिच्छत्ताविरदि-पमादजोगकोधादओ]</font></b> मिथ्यात्व, अविरति, प्रमाद, योग व क्रोधादि कषाय भेद हैं <b><font color=darkRed>[दु]</font></b> और उनके <b><font color=darkRed>[कमसो]</font></b> क्रम से <b><font color=darkRed>[पण-पण]</font></b> पाँच, पाँच <b><font color=darkRed>[पणदह]</font></b> पंद्रह <b><font color=darkRed>[तिय चदु]</font></b> तीन और चार <b><font color=darkRed>[भेदा]</font></b> भेद <b><font color=darkRed>[विण्णेया]</font></b> जानने चाहिए ।</div>
+<div class=paragraph></div>
     <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿The first of these, psychic influx <span class=comment>(bhava asrava)</span>, as an antecedent to bondage, is due to five reasons: wrong belief <span class=comment>(mithyātva)</span>, non-abstinence <span class=comment>(avirati)</span>, negligence <span class=comment>(pramāda)</span>, activity <span class=comment>(yoga)</span>, and passion <span class=comment>(kasāya)</span>. These are of five, five, fifteen, three, and four kinds, respectively.</div>
   <br><div class=teekakaar>
     <span onclick='toggleTeeka("0")' class=teeka0>&nbsp;&nbsp;ब्रह्मदेव सूरि</span>&nbsp;
