--- a/jainDataBase/shastra/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/index.html
+++ b/jainDataBase/shastra/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/index.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='0000_शास्त्र-मंगलाचरण.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>  <div data-role='navbar'>
     <ul>
 
@@ -61,7 +61,7 @@
     </li>
       </ul>
     </div>
-   <div class=gatha>﻿<font color=black>!!<font color=purple> श्रीसर्वज्ञवीतरागाय नम: </font>!!</font><br><br>श्रीमद्‌-भगवत्नेमिचंद्र-प्रणीत<br><br>श्री<br><font style="font-size:120px"> द्रव्यसंग्रह </font><br><br><font size=4 color=black>मूल सौरसेणी प्राकृत गाथा और ब्रह्मदेव-सूरि <span class=comment>(वि० सं० की १२वीं शताब्दी)</span> कृत टीका सहित</font><br><br><font size=3 color=blue>आभार : पद्यानुवाद : आ. डाॅ. हुकमचंद भारिल्ल</font></div>
+   <div class=gatha>﻿<font color=black>!!<font color=purple> श्रीसर्वज्ञवीतरागाय नम: </font>!!</font><br><br>श्रीमद्‌-भगवन्नेमिचन्द्र-प्रणीत<br><br>श्री<br><font style="font-size:120px"> द्रव्यसंग्रह </font><br><br><font size=4 color=black>मूल सौरसेणी प्राकृत गाथा और ब्रह्मदेव-सूरि <span class=comment>(वि० सं० की १२वीं शताब्दी)</span> कृत टीका सहित</font><br><br><font size=3 color=blue>आभार : पद्यानुवाद : आ. डाॅ. हुकमचंद भारिल्ल</font><br></div>
   <br><div class=teekakaar>
     <span onclick='toggleTeeka("0")' class=teeka0>&nbsp;&nbsp;ब्रह्मदेव सूरि</span>&nbsp;
     <span onclick='toggleTeeka("1")' class=teeka1>&nbsp;&nbsp;आर्यिका ज्ञानमती</span>&nbsp;
