updated dravyasandrah on 15th May

--- a/jainDataBase/gatha/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/index.html
+++ b/jainDataBase/gatha/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/index.html
@@ -61,7 +61,7 @@
 <div align=right><b><font size=20>- नेमिचंद्र-सिद्धांतचक्रवर्ती</font></b></div>
 <br><br><br><font size=2 color=darkRed>
 <div align=right>nikkyjain@gmail.com</div>
-<div align=right>Date : 20-Apr-2023</font></div>   <div class=adhikaar id=home><h1>Index</h1></div><br>
+<div align=right>Date : 15-May-2023</font></div>   <div class=adhikaar id=home><h1>Index</h1></div><br>
   <div class=main>अधिकार</div><br>
     <table align=center width=90% class=adhikarIndex>
       <td><a href='#ad1'>﻿मंगलाचरण</a>
@@ -150,8 +150,9 @@
 <a href='#home' class=index>&#x1f3e0;</a>
 <br><br><div class=adhikaar><h1>﻿मंगलाचरण</h1></div><br><div align=center><img src='../../../../../images/ahinsaParmoDharm.png' width='15%'></img></div>
 <br><div class=title id=gatha-01><span class=incFontSz>+ </span><a href=#index>﻿मंगलाचरण</a><span class=decFontSz> -</span></div><div class=gatha>﻿जीवमजीवं दव्वं, जिणवरवसहेण जेण णिद्दिट्ठं <br>देविंदविंदवंदं, वंदे तं सव्वदा सिरसा ॥1॥</div>
-<div class=gadya>कहे जीव अजीव जिन जिनवरवृषभ ने लोक में ।<br>वे वंद्य सुरपति वृन्द से बंदन करूं कर जोर मैं ॥१॥</div>
-<div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[जेण जिणवरवसहेण]</font></b> जिन जिनवर वृषभ ने <b><font color=darkRed>[जीवं अजीवं दव्वं]</font></b> जीव और अजीव द्रव्य को <b><font color=darkRed>[णिट्ठि]</font></b> कहा है <b><font color=darkRed>[देविंदविंदवंदं]</font></b> देवेन्द्रों के समूह से वन्दनीय हैं <b><font color=darkRed>[तं]</font></b> उनको <b><font color=darkRed>[सव्वदा]</font></b> सदा <b><font color=darkRed>[सिरसा]</font></b> मस्तक से <b><font color=darkRed>[वंदे]</font></b> मैं नमस्कार करता हूँ। </div><hr class=type_7>
+<div class=gadya>कहे जीव अजीव जिन जिनवरवृषभ ने लोक में ।<br>वे वंद्य सुरपति वृन्द से बंदन करूं कर जोर मैं ॥१॥<br></div>
+<div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[जेण जिणवरवसहेण]</font></b> जिन जिनवर वृषभ ने <b><font color=darkRed>[जीवं अजीवं दव्वं]</font></b> जीव और अजीव द्रव्य को <b><font color=darkRed>[णिट्ठि]</font></b> कहा है <b><font color=darkRed>[देविंदविंदवंदं]</font></b> देवेन्द्रों के समूह से वन्दनीय हैं <b><font color=darkRed>[तं]</font></b> उनको <b><font color=darkRed>[सव्वदा]</font></b> सदा <b><font color=darkRed>[सिरसा]</font></b> मस्तक से <b><font color=darkRed>[वंदे]</font></b> मैं नमस्कार करता हूँ। </div>
+<div class=paragraph></div><hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
 <br><br><div class=adhikaar><h1>﻿छह-द्रव्य अधिकार</h1></div><br><div align=center><img src='../../../../../images/ahinsaParmoDharm.png' width='15%'></img></div>
 <br><div class=title id=gatha-02><span class=incFontSz>+ </span><a href=#index>﻿जीव द्रव्य के नव अधिकार</a><span class=decFontSz> -</span></div><div class=gatha>﻿जीवो उवओगमओ, अमुत्तिकत्ता सदेहपरिमाणो<br>भोत्ता संसारत्थो, सिद्धो सो विस्ससोड्ढगई ॥2॥</div>
