--- a/jainDataBase/shastra/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/18.html
+++ b/jainDataBase/shastra/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/18.html
@@ -73,9 +73,13 @@
   </div>
   <br><table width=90% align=center>
     <tr><td><div id=teeka0 class=teeka><b><font color=darkgreen>ब्रह्मदेव सूरि :</font></b> <span class=stitle id=stitle0 onclick='toggleSTeeka("0")'><b><font color=red>संस्कृत</font></b></span><div class=steeka id=steeka0>﻿ठहरे हुए पुद्गल तथा जीवों को ठहरने में सहकारी कारण अधर्म-द्रव्य है । उसमें दृष्टान्त -- जैसे छाया पथिकों को ठहरने में सहकारी कारण; परन्तु स्वयं गमन करते हुए जीव व पुद्गलों को अधर्म द्रव्य नहीं ठहराता है । सो ऐसे है -- <br>यद्यपि निश्चयनय से आत्म-अनुभव से उत्पन्न सुखामृत रूप जो परम स्वास्थ्य है वह निज रूप में स्थिति का कारण है; परन्तु मैं सिद्ध हूँ, शुद्ध हूँ, अनंतज्ञान आदि गुणों का धारक हूँ, शरीर प्रमाण हूँ, नित्य हूँ, असंख्यात प्रदेशी हूँ तथा अमूर्तिक हूँ ॥१॥<br>इस गाथा में कही हुई सिद्धभक्ति के रूप से पहले सविकल्प अवस्था में सिद्ध भी जैसे भव्य जीवों के लिए बहिरंग सहकारी कारण होते हैं, उसी तरह अपने-अपने उपादान कारण से अपने आप ठहरते हुए जीव पुद्गलों को अधर्मद्रव्य ठहरने का सहकारी कारण होता है । लोक-व्यवहार से जैसे छाया अथवा पृथ्वी ठहरते हुए यात्रियों आदि को ठहरने में सहकारी होती है उसी तरह स्वयं ठहरते हुए जीव पुद्गलों के ठहरने में अधर्मद्रव्य सहकारी होता है । इसी प्रकार अधर्मद्रव्य के कथन द्वारा यह गाथा समाप्त हुई ॥१८॥<br>अब आकाशद्रव्य का कथन करते हैं --<hr class=type_7></div><br><br>﻿ठहरे हुए पुद्गल तथा जीवों को ठहरने में सहकारी कारण अधर्म-द्रव्य है । उसमें दृष्टान्त -- जैसे छाया पथिकों को ठहरने में सहकारी कारण; परन्तु स्वयं गमन करते हुए जीव व पुद्गलों को अधर्म द्रव्य नहीं ठहराता है । सो ऐसे है -- <br><br>
-यद्यपि निश्चयनय से आत्म-अनुभव से उत्पन्न सुखामृत रूप जो परम स्वास्थ्य है वह निज रूप में स्थिति का कारण है; परन्तु मैं सिद्ध हूँ, शुद्ध हूँ, अनंतज्ञान आदि गुणों का धारक हूँ, शरीर प्रमाण हूँ, नित्य हूँ, असंख्यात प्रदेशी हूँ तथा अमूर्तिक हूँ ॥१॥<br><br>
+यद्यपि निश्चयनय से आत्म-अनुभव से उत्पन्न सुखामृत रूप जो परम स्वास्थ्य है वह निज रूप में स्थिति का कारण है; <br><br>
+<span class=notes>(सिद्धोsहं सुद्धोsहं अणंतणाणाइगुणसमिद्धोsहं ।<br><br>
+देहपमाणो  णिच्चो असंखदेसो अमुत्तो य ।।)</span><br><br>
+परन्तु मैं सिद्ध हूँ, शुद्ध हूँ, अनंतज्ञान आदि गुणों का धारक हूँ, शरीर प्रमाण हूँ, नित्य हूँ, असंख्यात प्रदेशी हूँ तथा अमूर्तिक हूँ ॥१॥<br><br>
 इस गाथा में कही हुई सिद्धभक्ति के रूप से पहले सविकल्प अवस्था में सिद्ध भी जैसे भव्य जीवों के लिए बहिरंग सहकारी कारण होते हैं, उसी तरह अपने-अपने उपादान कारण से अपने आप ठहरते हुए जीव पुद्गलों को अधर्मद्रव्य ठहरने का सहकारी कारण होता है । लोक-व्यवहार से जैसे छाया अथवा पृथ्वी ठहरते हुए यात्रियों आदि को ठहरने में सहकारी होती है उसी तरह स्वयं ठहरते हुए जीव पुद्गलों के ठहरने में अधर्मद्रव्य सहकारी होता है । इसी प्रकार अधर्मद्रव्य के कथन द्वारा यह गाथा समाप्त हुई ॥१८॥<br><br>
-अब आकाशद्रव्य का कथन करते हैं --
+अब आकाशद्रव्य का कथन करते हैं --<br><br>
+
        </div>
     </td></tr>
     <tr><td><div id=teeka1 class=teeka><b><font color=darkgreen>आर्यिका ज्ञानमती :</font></b> <br><br>﻿<b><font color=red>प्रश्न – अधर्म द्रव्य किसे कहते हैं?<br><br>
