updated on 14th July

--- a/jainDataBase/gatha/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/index.html
+++ b/jainDataBase/gatha/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/index.html
@@ -61,7 +61,7 @@
 <div align=right><b><font size=20>- नेमिचंद्र-सिद्धांतचक्रवर्ती</font></b></div>
 <br><br><br><font size=2 color=darkRed>
 <div align=right>nikkyjain@gmail.com</div>
-<div align=right>Date : 15-May-2023</font></div>   <div class=adhikaar id=home><h1>Index</h1></div><br>
+<div align=right>Date : 14-Jul-2023</font></div>   <div class=adhikaar id=home><h1>Index</h1></div><br>
   <div class=main>अधिकार</div><br>
     <table align=center width=90% class=adhikarIndex>
       <td><a href='#ad1'>﻿मंगलाचरण</a>
@@ -316,9 +316,10 @@
 <div class=gadya>आत्मा से भिन्न द्रव्यों में रहें न रत्नत्रय ।<br>बस इसलिए ही रतनत्रयमय आतमा ही मुक्तिमग ॥४०॥</div>
 <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[रयणत्तयं]</font></b> रत्नत्रयरूप धर्म <b><font color=darkRed>[अप्पाणं मुइत्तु]</font></b> आत्मा को छोड़कर <b><font color=darkRed>[अण्णदवियम्हि]</font></b> अन्य द्रव्य में <b><font color=darkRed>[ण वट्टइ]</font></b> नहीं रहता <b><font color=darkRed>[तम्हा]</font></b> इस कारण से <b><font color=darkRed>[तत्तियमइओ आदा]</font></b> इन तीनों मय अर्थात् सम्यग्दर्शन, सम्यग्ज्ञान तथा सम्यक्चारित्र सहित आत्मा ही <b><font color=darkRed>[हु]</font></b> निश्चय से <b><font color=darkRed>[मोक्खस्स कारणं]</font></b> मोक्ष का कारण <b><font color=darkRed>[होदि]</font></b> होती है ।</div><hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
-<br><div class=title id=gatha-41><span class=incFontSz>+ </span><a href=#index>﻿व्यवहार सम्यग्दर्शन</a><span class=decFontSz> -</span></div><div class=gatha>﻿जीवादीसद्दहणं, सम्मत्तं रूवमप्पणो तं तु<br>दुरभिणिवेसविमुक्वं, णाणं सम्मं खु होदि सदि जम्हि ॥41॥</div>
+<br><div class=title id=gatha-41><span class=incFontSz>+ </span><a href=#index>﻿व्यवहार सम्यग्दर्शन</a><span class=decFontSz> -</span></div><div class=gatha>﻿जीवादीसद्दहणं, सम्मत्तं रूवमप्पणो तं तु<br>दुरभिणिवेसविमुक्कं, णाणं सम्मं खु होदि सदि जम्हि ॥41॥<br></div>
 <div class=gadya>जीवादि का श्रद्धान समकित जो कि आत्मस्वरूप है ।<br>और दुरभिनिवेश विरहित ज्ञान सम्यग्ज्ञान है ॥४१॥</div>
-<div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[जीवादीसद्दहणं]</font></b> जीवादि <span class=comment>(सात तत्त्वों)</span> का यथार्थ श्रद्धान करना <b><font color=darkRed>[सम्मत्तं]</font></b> सम्यक्त्व है <b><font color=darkRed>[तं]</font></b> वह <b><font color=darkRed>[अप्पणो रूवं]</font></b> आत्मा का स्वभाव है <b><font color=darkRed>[तु]</font></b> और <b><font color=darkRed>[जम्हि]</font></b> जिस <span class=comment>(सम्यग्दर्शन)</span> के <b><font color=darkRed>[सदि]</font></b> होने पर <b><font color=darkRed>[णाणं खु]</font></b> ज्ञान निश्चय से <b><font color=darkRed>[दुरभिणिवेसविमुक्कं]</font></b> विपरीत अभिप्राय <span class=comment>(संशय, विपर्यय, अनध्यवसाय से रहित)</span> होता हुआ <b><font color=darkRed>[सम्मं होदि]</font></b> सम्यक हो जाता है ।</div><hr class=type_7>
+<div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[जीवादीसद्दहणं]</font></b> जीवादि <span class=comment>(सात तत्त्वों)</span> का यथार्थ श्रद्धान करना <b><font color=darkRed>[सम्मत्तं]</font></b> सम्यक्त्व है <b><font color=darkRed>[तं]</font></b> वह <b><font color=darkRed>[अप्पणो रूवं]</font></b> आत्मा का स्वभाव है <b><font color=darkRed>[तु]</font></b> और <b><font color=darkRed>[जम्हि]</font></b> जिस <span class=comment>(सम्यग्दर्शन)</span> के <b><font color=darkRed>[सदि]</font></b> होने पर <b><font color=darkRed>[णाणं खु]</font></b> ज्ञान निश्चय से <b><font color=darkRed>[दुरभिणिवेसविमुक्कं]</font></b> विपरीत अभिप्राय <span class=comment>(संशय, विपर्यय, अनध्यवसाय )</span> से रहित होता हुआ <b><font color=darkRed>[सम्मं होदि]</font></b> सम्यक हो जाता है ।</div>
+<div class=paragraph></div><hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
 <br><div class=title id=gatha-42><span class=incFontSz>+ </span><a href=#index>﻿सम्यग्ज्ञान का स्वरूप</a><span class=decFontSz> -</span></div><div class=gatha>﻿संसयविमोह विब्भम, विवज्जियं अप्पपरसरूवस्स<br>गहणं सम्मं णाणं; सायार-मणेयभेयं च ॥42॥</div>
 <div class=gadya>संशयविमोहविभरमविरहित स्वपर को जो जानता ।<br>साकार सम्यग्ज्ञान है वह है अनेकप्रकार का ॥४२॥</div>
