updated gatha 42 dravyasangrah

--- a/jainDataBase/gatha/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/index.html
+++ b/jainDataBase/gatha/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/index.html
@@ -61,7 +61,7 @@
 <div align=right><b><font size=20>- नेमिचंद्र-सिद्धांतचक्रवर्ती</font></b></div>
 <br><br><br><font size=2 color=darkRed>
 <div align=right>nikkyjain@gmail.com</div>
-<div align=right>Date : 14-Jul-2023</font></div>   <div class=adhikaar id=home><h1>Index</h1></div><br>
+<div align=right>Date : 18-Jul-2023</font></div>   <div class=adhikaar id=home><h1>Index</h1></div><br>
   <div class=main>अधिकार</div><br>
     <table align=center width=90% class=adhikarIndex>
       <td><a href='#ad1'>﻿मंगलाचरण</a>
@@ -321,7 +321,7 @@
 <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[जीवादीसद्दहणं]</font></b> जीवादि <span class=comment>(सात तत्त्वों)</span> का यथार्थ श्रद्धान करना <b><font color=darkRed>[सम्मत्तं]</font></b> सम्यक्त्व है <b><font color=darkRed>[तं]</font></b> वह <b><font color=darkRed>[अप्पणो रूवं]</font></b> आत्मा का स्वभाव है <b><font color=darkRed>[तु]</font></b> और <b><font color=darkRed>[जम्हि]</font></b> जिस <span class=comment>(सम्यग्दर्शन)</span> के <b><font color=darkRed>[सदि]</font></b> होने पर <b><font color=darkRed>[णाणं खु]</font></b> ज्ञान निश्चय से <b><font color=darkRed>[दुरभिणिवेसविमुक्कं]</font></b> विपरीत अभिप्राय <span class=comment>(संशय, विपर्यय, अनध्यवसाय )</span> से रहित होता हुआ <b><font color=darkRed>[सम्मं होदि]</font></b> सम्यक हो जाता है ।</div>
 <div class=paragraph></div><hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
-<br><div class=title id=gatha-42><span class=incFontSz>+ </span><a href=#index>﻿सम्यग्ज्ञान का स्वरूप</a><span class=decFontSz> -</span></div><div class=gatha>﻿संसयविमोह विब्भम, विवज्जियं अप्पपरसरूवस्स<br>गहणं सम्मं णाणं; सायार-मणेयभेयं च ॥42॥</div>
+<br><div class=title id=gatha-42><span class=incFontSz>+ </span><a href=#index>﻿सम्यग्ज्ञान का स्वरूप</a><span class=decFontSz> -</span></div><div class=gatha>﻿संसयविमोह विब्भम, विवज्जियं अप्पपरसरूवस्स<br>गहणं सम्मं णाणं; सायार-मणेयभेयं तु ॥42॥<br></div>
 <div class=gadya>संशयविमोहविभरमविरहित स्वपर को जो जानता ।<br>साकार सम्यग्ज्ञान है वह है अनेकप्रकार का ॥४२॥</div>
 <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[संसयविमोहविब्भम-विवज्जियं]</font></b> संशय <span class=comment>(अनेक कोटि को स्पर्श करने वाला संदेहात्मक ज्ञान)</span>, विपर्यय <span class=comment>(वस्तु धर्म के विपरीत परिचय कराने वाला ज्ञान)</span> और अनध्यवसाय <span class=comment>(पदार्थ के विषय में कुछ भी निर्णय नहीं होने रूप ज्ञान -- इन तीन दोषों)</span> से रहित <b><font color=darkRed>[अप्पपरसरूवस्स]</font></b> अपने आत्मा के तथा पर पदार्थों के स्वरूप का <b><font color=darkRed>[गहणं]</font></b> ग्रहण करना <b><font color=darkRed>[सायारं]</font></b> साकार/सविकल्प <b><font color=darkRed>[च]</font></b> और <b><font color=darkRed>[अणेयभेयं]</font></b> अनेक भेद वाला <b><font color=darkRed>[सम्मण्णाणं]</font></b> सम्यग्ज्ञान है ।</div><hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
