--- a/jainDataBase/shastra/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/42.html
+++ b/jainDataBase/shastra/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/42.html
@@ -63,7 +63,7 @@
     </div>
     <br><div class=title id=gatha-42><span class=incFontSz>+ </span><a href=#index>
 ﻿सम्यग्ज्ञान का स्वरूप</a><span class=decFontSz> -</span></div>
-   <div class=gatha>﻿संसयविमोह विब्भम, विवज्जियं अप्पपरसरूवस्स<br>गहणं सम्मं णाणं; सायार-मणेयभेयं च ॥42॥</div>
+   <div class=gatha>﻿संसयविमोह विब्भम, विवज्जियं अप्पपरसरूवस्स<br>गहणं सम्मं णाणं; सायार-मणेयभेयं तु ॥42॥<br></div>
     <div class=gadya>संशयविमोहविभरमविरहित स्वपर को जो जानता ।<br>साकार सम्यग्ज्ञान है वह है अनेकप्रकार का ॥४२॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[संसयविमोहविब्भम-विवज्जियं]</font></b> संशय <span class=comment>(अनेक कोटि को स्पर्श करने वाला संदेहात्मक ज्ञान)</span>, विपर्यय <span class=comment>(वस्तु धर्म के विपरीत परिचय कराने वाला ज्ञान)</span> और अनध्यवसाय <span class=comment>(पदार्थ के विषय में कुछ भी निर्णय नहीं होने रूप ज्ञान -- इन तीन दोषों)</span> से रहित <b><font color=darkRed>[अप्पपरसरूवस्स]</font></b> अपने आत्मा के तथा पर पदार्थों के स्वरूप का <b><font color=darkRed>[गहणं]</font></b> ग्रहण करना <b><font color=darkRed>[सायारं]</font></b> साकार/सविकल्प <b><font color=darkRed>[च]</font></b> और <b><font color=darkRed>[अणेयभेयं]</font></b> अनेक भेद वाला <b><font color=darkRed>[सम्मण्णाणं]</font></b> सम्यग्ज्ञान है ।</div>
     <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿Detailed cognition of substances, souls and non-souls, without the fallacies of doubt, error, or uncertainty, is right knowledge. Right knowledge is of many kinds.</div>
